--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -14,36 +14,55 @@
   }
 }
 
-:root {
-  --accent-color: 16, 185, 129;
-  --accent-color-hover: 5, 150, 105;
-  --accent-color-faded: rgba(5, 150, 105, 0.1);
+@import "margin";
+@import "animation";
+@import "scrollbar";
+@import "button";
+@import "flexbox";
+@import "themes";
+@import "html";
+@import "input";
+@import "font";
+
+.pointer {
+  cursor: pointer;
 }
 
-[data-theme="dark"] {
-  --bg-primary: #111827;
-  --bg-secondary: #1F2937;
-  --bg-tertiary: #374151;
-  --font-color: #ffffff;
-  --font-color-secondary: #9CA3AF;
-  --accent: #10B981;
-  --accent-hover: #059669;
-
-  --font-base: #ffffff;
-  --font-muted: #6A7280;
-  --font-inverted: #ffffff;
+.full-height {
+  height: 100vh;
 }
 
-[data-theme="light"] {
-  --bg-primary: #f4f4f4;
-  --bg-secondary: #ffffff;
-  --bg-tertiary: #ffffff;
-  --font-color: #111827;
-  --font-color-secondary: #374151;
-  --accent: #10B981;
-  --accent-hover: #059669;
-  
-  --font-base: #111827;
-  --font-muted: #6A7280;
-  --font-inverted: #ffffff;
+.container {
+  margin: auto;
+  padding: 2rem;
+}
+
+.card {
+  background-color: var(--bg-primary);
+  border: 1px solid var(--bg-tertiary);
+  border-radius: var(--btn-radius);
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.fullwidth {
+  width: 100%;
 }
