Add some refacto and add google plugin

--- a/assets/style/animation.scss
+++ b/assets/style/animation.scss
@@ -1,9 +1,25 @@
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity .2s;
+.page-enter-active {
+  transition: all 0.1s ease-out;
+}
+.page-leave-active {
+  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
+}
+.page-enter-from,
+.page-leave-to {
+  transform: translateY(20px);
+  opacity: 0;
 }
 
-.fade-enter, .fade-leave-to {
+// layout transition
+.layout-enter-active {
+  transition: all 0.1s ease-out;
+}
+.layout-leave-active {
+  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
+}
+.layout-enter-from,
+.layout-leave-to {
+  transform: translateY(-20px);
   opacity: 0;
 }
 
