--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -18,6 +18,33 @@
 }
 
 html,body, #__nuxt, #__layout{
+  @apply bg-primary;
   height:100%!important;
   width: 100%!important;
+}
+
+@layer components {
+  .input {
+    @apply bg-input;
+    @apply text-primary placeholder:text-placeholder;
+    @apply border-sm rounded-md border-input;
+    @apply focus:outline-none focus:ring-2 focus:ring-accent;
+    @apply w-full h-full px-4 py-2;
+  }
+
+  .btn-primary {
+    @apply bg-accent hover:bg-accent-hover;
+    @apply text-inverted;
+    @apply rounded-md;
+    @apply px-4 py-2 flex w-full justify-center;
+    @apply transition-colors duration-300 cursor-pointer;
+  }
+
+  .btn-secondary {
+    @apply bg-primary;
+    @apply text-muted;
+    @apply border-sm rounded-md border-input hover:border-muted;
+    @apply px-4 py-2 flex w-full justify-center;
+    @apply transition-colors duration-300 cursor-pointer;
+  }
 }
