--- a/assets/style/themes.scss
+++ b/assets/style/themes.scss
@@ -5,24 +5,28 @@
 }
 
 [data-theme="dark"] {
-  --bg-primary: #111827;
+  --bg-primary: #05010D;
   --bg-secondary: #1F2937;
   --bg-tertiary: #374151;
-  --font-color: #ffffff;
+  --font-color: #FFFFFF;
   --font-color-secondary: #9CA3AF;
   --accent: #10B981;
   --accent-hover: #059669;
 
   --font-base: #ffffff;
-  --font-muted: #6A7280;
+  --font-muted: #66646A;
+  --font-placeholder: #403D46;
   --font-inverted: #ffffff;
+
+  --bg-input: #120F19;
+  --border-input: #1C1822;
 }
 
 [data-theme="light"] {
-  --bg-primary: #f4f4f4;
-  --bg-secondary: #ffffff;
-  --bg-tertiary: #ffffff;
-  --font-color: #111827;
+  --bg-primary: #FFFFFF;
+  --bg-secondary: #FAFAFA;
+  --bg-tertiary: #FFFFFF;
+  --font-color: #05010D;
   --font-color-secondary: #374151;
   --accent: #10B981;
   --accent-hover: #059669;
@@ -30,5 +34,9 @@
 
   --font-base: #111827;
   --font-muted: #6A7280;
+  --font-placeholder: #6A7280;
   --font-inverted: #ffffff;
+
+  --bg-input: #ffffff;
+  --border-input: #eae7e7;
 }
