--- a/assets/style/themes.scss
+++ b/assets/style/themes.scss
@@ -13,13 +13,14 @@
   --accent: #10B981;
   --accent-hover: #059669;
 
-  --font-base: #ffffff;
+  --font-base: #FFFFFF;
   --font-muted: #66646A;
   --font-placeholder: #403D46;
-  --font-inverted: #ffffff;
+  --font-inverted: #FFFFFF;
 
   --bg-input: #120F19;
-  --border-input: #1C1822;
+  --border-primary: #1C1822;
+  --border-muted: #1C1822;
 }
 
 [data-theme="light"] {
@@ -35,8 +36,9 @@
   --font-base: #111827;
   --font-muted: #6A7280;
   --font-placeholder: #6A7280;
-  --font-inverted: #ffffff;
+  --font-inverted: #FFFFFF;
 
-  --bg-input: #ffffff;
-  --border-input: #eae7e7;
+  --bg-input: #FFFFFF;
+  --border-primary: #eae7e7;
+  --border-muted: #eae7e7;
 }
