--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -26,7 +26,7 @@ html,body, #__nuxt, #__layout{
 
 @layer components {
   .input {
-    @apply bg-input;
+    @apply bg-secondary;
     @apply text-primary placeholder:text-placeholder;
     @apply border-sm rounded-md border-primary hover:border-muted;
     @apply focus:outline-none focus:ring-2 focus:ring-accent;
