Navbar refacto, and init auth middleware

--- a/assets/style/themes.scss
+++ b/assets/style/themes.scss
@@ -10,8 +10,8 @@
 }
 
 [data-theme="dark"] {
-  --bg-primary: #05010D;
-  --bg-secondary: #120F19;
+  --bg-primary: #0C0C0D;
+  --bg-secondary: #18181B;
   --font-color: #FFFFFF;
 
   --font-primary: #FFFFFF;
