--- a/assets/style/themes.scss
+++ b/assets/style/themes.scss
@@ -11,6 +11,7 @@
 
 [data-theme="dark"] {
   --bg-primary: #0C0C0D;
+  --bg-primary-opacity: 12, 12, 13;
   --bg-secondary: #18181B;
   --font-color: #FFFFFF;
 
@@ -25,6 +26,7 @@
 
 [data-theme="light"] {
   --bg-primary: #FFFFFF;
+  --bg-primary-opacity: 255, 255, 255;
   --bg-secondary: #FAFAFA;
   --font-color: #05010D;
 
