Change input color

--- a/assets/style/themes.scss
+++ b/assets/style/themes.scss
@@ -19,7 +19,7 @@
   --font-muted: #66646A;
   --font-inverted: #FFFFFF;
 
-  --border-primary: #1C1822;
+  --border-primary: #2c282e;
   --border-primary-hover: #66646A;
   --border-muted: #1C1822;
 }
